css/styles.css
/* Importing a Google Font */

@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
/* Changing the main font and background colour */


.headershop {font-family: 'Poppins', sans-serif;}
.webshopitem {color: #FFFFFF;}

.dotgreen {
  height: 25px;
  width: 25px;
  background-color: #9FB870;
  border-radius: 50%;
  display: inline-block;
}

.dotblack {
  height: 25px;
  width: 25px;
  background-color: #000000;
  border-radius: 50%;
  display: inline-block;
}

.dotgrey {
  height: 25px;
  width: 25px;
  background-color: #9A9A9A;
  border-radius: 50%;
  display: inline-block;
}

.dotyellow {
  height: 25px;
  width: 25px;
  background-color: #E8C82C;
  border-radius: 50%;
  display: inline-block;
}

.dotblue {
  height: 25px;
  width: 25px;
  background-color: #B6CCE1;
  border-radius: 50%;
  display: inline-block;
}

.dotorange {
  height: 25px;
  width: 25px;
  background-color: #CA6134;
  border-radius: 50%;
  display: inline-block;
}

.dotpink {
  height: 25px;
  width: 25px;
  background-color: #F4B7C9;
  border-radius: 50%;
  display: inline-block;
}

.dotdarkgreen {
  height: 25px;
  width: 25px;
  background-color: #5F7336;
  border-radius: 50%;
  display: inline-block;
}







.dotblue:hover {
    border: #333 solid 3px;
}

.dotblack:hover {
    border: #9A9A9A solid 3px;
}

.dotgrey:hover {
    border: #333 solid 3px;
}

.dotyellow:hover {
    border: #333 solid 3px;
}

.dotgreen:hover {
    border: #333 solid 3px;
}

.dotorange:hover {
    border: #333 solid 3px;
}

.dotpink:hover {
    border: #333 solid 3px;
}

.dotdarkgreen:hover {
    border: #333 solid 3px;
}









body {
    font-family: andada;
    background-color: #FFFFFF;
    font-style: normal;
    font-weight: 400;
}

.mycolor{
	color: #6A853E}

/* Changing the background colour for the header */

header {
	background-color: #B5AF8D;
}

/* Changing the background color for the navigation bar */

.navbar {background-color: #E6E6CA}

.material-icons{
  position: absolute;
  right:15px;
}

.material-icons:hover{
    color:#6A853E;
}

.middlebox {color: #B5AF8D;}

.bolder {font-weight: 300;}

.carousel-inner{
	position: absolute;
	left:70px;
	top:70px;
	
}

.carousel-item{
	width: 0px; 
}

.carousel-control-next,
.carousel-control-prev /*, .carousel-indicators */ {
    filter: invert(100%);
}


.carousel-control-prev-icon {
    position: absolute;
    bottom: -600px;
    left: 78px;
}

.carousel-control-next-icon {
    position: absolute;
    bottom: -600px;
    right: 1120px;
	color: #000000;
}


.containerproduct{
	text-align: left;
	position: absolute;
	top:260px;
	left:1205px;
	font-family:'Poppins', sans-serif;
}

.logoplacement{
	position:absolute;
	top:175px;
	left:1200px
}




/* Product Color */
.product-color {
  margin-bottom: 30px;
}

.color-choose div {
  display: inline-block;
}

.color-choose input[type="radio"] {
  display: none;
}

.color-choose input[type="radio"] + label span {
  display: inline-block;
  width: 40px;
  height: 40px;
  margin: -1px 4px 0 0;
  vertical-align: middle;
  cursor: pointer;
  border-radius: 50%;
}

.color-choose input[type="radio"] + label span {
  border: 2px solid #FFFFFF;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
}

.color-choose input[type="radio"]#grey+ label span {
  background-color: #9A9A9A;
}
.color-choose input[type="radio"]#green+ label span {
  background-color: #9FB870;
}
.color-choose input[type="radio"]#black + label span {
  background-color: #323232;
}

.color-choose input[type="radio"]#white
+ label span {
  background-color: #FFFFFF
}




.color-choose input[type="radio"]:checked + label span {
  background-image: url("../images/Product/check-icn.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.color-choosewhite input[type="radio"]:checked + label span {
  background-image: url("../images/Product/check-icn.svg");
  background-repeat: no-repeat;
  background-position: center;
}





/* Effect on social media buttons */

footer a:hover {
	opacity: .5;
}

